--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# stickers
+# stickers <img src="man/figures/logo.png" align="right" alt="logo" width="120" />
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/jabenninghoff/stickers/workflows/R-CMD-check/badge.svg)](https://github.com/jabenninghoff/stickers/actions)
